intel/bench_214_new/extr_.reactossdklib3rdpartystlportsrcc_locale_win32c_locale_win32.c___ConvertDate_with_main/log.txt
bench_214_new/extr_.reactossdklib3rdpartystlportsrcc_locale_win32c_locale_win32.c___ConvertDate_with_main/extr_.reactossdklib3rdpartystlportsrcc_locale_win32c_locale_win32.c___ConvertDate_with_main.c:138:68: error: use of undeclared identifier 'NULL'
      while (*cur_char != '\'' && *cur_char != 0 && (cur_output == NULL || cur_output != end_output)) {
                                                                   ^
1 error generated.
HLS FPGA Parse FAILED.
